# voiceDemo

./: .gitignore  README.md  build-all.bat  build-linux.sh  build-macos.sh  download-model.ps1  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  开发文档.md  打包指南.md
.github/workflows/: build.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/models/: README.txt
src-tauri/src/: audio.rs  commands.rs  inference.rs  main.rs
src/components/: VoiceRecorder.vue
