[package]
name = "voice-demo"
version = "1.0.0"
edition = "2021"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
sherpa-onnx = "1.13.4"
tokio = { version = "1", features = ["full"] }
